--- a/hositamtam/src/main/webapp/css/loginHeader.css
+++ b/hositamtam/src/main/webapp/css/loginHeader.css
@@ -33,6 +33,11 @@ ul {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /* header */
 .mainHeader {
   position: fixed;
@@ -54,6 +59,8 @@ ul {
 }
 
 .market__search {
+  border: 2px solid var(--color-gray);
+  border-radius: 4px;
 }
 
 .market__searchInput {
@@ -62,7 +69,7 @@ ul {
   align-items: center;
   padding: 0;
   font-size: 1.5rem;
-  border-radius: 4px;
+  border: none;
 }
 
 .market__searchButton {
@@ -71,6 +78,7 @@ ul {
   padding: 0;
   border: none;
   font-size: 1.5rem;
+  color: var(--color-gray);
   background-color: white;
 }
 
@@ -88,10 +96,12 @@ ul {
   font-size: 1.5rem;
   padding: 8px 16px;
   border-bottom: 1px solid transparent;
+  /* cursor: pointer; */
 }
 
 .mainHeader__menu__item:hover {
   border-bottom: 1px solid var(--color-accent);
+  /* cursor: pointer; */
 }
 
 .mainHeader__menu__item.active {
