--- a/hositamtam/src/main/webapp/css/myPageUpdate.css
+++ b/hositamtam/src/main/webapp/css/myPageUpdate.css
@@ -34,35 +34,14 @@ body {
   margin: auto;
 }
 
-/* Category */
-/* .category {
-  ;
-}
-
-.category__menu {
-  width: 260px;
-  margin-top: 6rem;
-  display: flex;
-  border: 3px solid var(--color-accent);
-}
-
-.category__list {
-  margin: 1rem 1rem;
-}
-
-.category__contents {
-  padding: 0 1rem;
-} */
-
-/* Login */
-#login {
+/* Sign Up */
+#mypage__update {
   display: flex;
   height: 745px;
-  /* height: 522px; */
-  width: 100%;
+  margin: auto;
 }
 
-.login {
+.mypage__update {
   display: block;
   align-items: center;
   text-align: center;
@@ -73,66 +52,59 @@ body {
   border-radius: 50px;
 }
 
-.login__label {
+#mypage__update__form {
+  margin: 0;
+}
+
+.mypage__update__id {
+  font-size: 20px;
+  color: var(--color-gray);
+}
+
+.mypage__update__label {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
-.login__error {
-  color: red;
-  margin: 1rem 0;
-}
-
-.login__input {
+.mypage__update__input {
   display: block;
   margin: 5px 0;
-  width: 95%;
+  width: 100%;
   padding: 10px;
   border: 3px solid var(--color-primary);
   border-radius: 4px;
   font-size: 1rem;
 }
 
-#login__form {
-  margin: 0;
+.duplication__check {
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  color: var(--color-background);
+  background-color: #d9d9d9;
+  font-size: 15px;
+  margin-left: 1rem;
 }
 
-.login__signup__button {
-  display: flex;
-  padding: 0 10px;
-  margin-bottom: 1rem;
+.mypage__update__error {
+  color: red;
+  margin: 1rem 0;
 }
 
-.login__button {
-  width: 100%;
+.mypage__update__button {
+  width: 40%;
   height: 40px;
-  margin: 0 1rem;
   font-size: 20px;
   border-radius: 4px;
   border: none;
   color: var(--color-background);
   background-color: var(--color-primary);
   transition: all 0.15s linear;
+  margin-bottom: 4px;
 }
 
-.login__button:hover {
-  background-color: var(--color-accent);
-}
-
-.signup__button {
-  width: 100%;
-  height: 40px;
-  margin: 0 1rem;
-  font-size: 20px;
-  border-radius: 4px;
-  border: none;
-  color: var(--color-background);
-  background-color: var(--color-gray);
-  transition: all 0.15s linear;
-}
-
-.signup__button:hover {
+.mypage__update__button:hover {
   background-color: var(--color-accent);
 }
