--- a/hositamtam/src/main/webapp/finalModel/ajaxTest.css
+++ b/hositamtam/src/main/webapp/finalModel/ajaxTest.css
@@ -7,3 +7,8 @@ th, td {
 	padding: 5px 10px;
 	text-align: center;
 }
+
+.personalPcontent {
+	border: 2px solid gray;
+	border-collapse: collapse;
+}
