--- a/hositamtam/src/main/webapp/css/loginHeader.css
+++ b/hositamtam/src/main/webapp/css/loginHeader.css
@@ -66,18 +66,22 @@ a {
 .market__searchInput {
   width: 40rem;
   height: 3rem;
+  /* height: 2rem; */
   align-items: center;
   padding: 0;
   font-size: 1.5rem;
+  /* font-size: 1.2rem; */
   border: none;
 }
 
 .market__searchButton {
   width: 3rem;
   height: 3rem;
+  /* height: 2rem; */
   padding: 0;
   border: none;
   font-size: 1.5rem;
+  /* font-size: 1.2rem; */
   color: var(--color-gray);
   background-color: white;
 }
@@ -94,7 +98,7 @@ a {
 .mainHeader__menu__item {
   display: block;
   font-size: 1.5rem;
-  padding: 8px 16px;
+  padding: 8px 20px;
   border-bottom: 1px solid transparent;
   /* cursor: pointer; */
 }
