--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -28,38 +28,42 @@ body {
   margin: 0;
 }
 
-hr {
-  background: var(--color-accent);
-  height: 1px;
-  border: 0;
-}
-
-h4 {
-  margin: 0;
-}
-
 /* common */
 .max-container {
   max-width: var(--size-max-width);
   margin: auto;
 }
 
+.storeDetail__hr {
+  background: var(--color-accent);
+  height: 1px;
+  border: 0;
+  width: 80%;
+}
+
+.storeDetail__h4 {
+  margin: 0;
+}
+
 /* Store Detail */
 #storeDetail {
   width: 100%;
   text-align: center;
+  margin-top: 10rem;
+  padding: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .storeDetail__info {
   display: block;
   font-size: 2rem;
   color: var(--color-gray);
-  margin-top: 6rem;
-  margin-bottom: 1rem;
+
+  margin-bottom: 2rem;
 }
 
 .storeDetail__like {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: var(--color-gray);
   border: none;
   background-color: var(--color-background);
@@ -71,7 +75,7 @@ h4 {
 }
 
 .storeDetail__modify {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: var(--color-background);
   border: none;
   background-color: var(--color-primary);
@@ -87,45 +91,34 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 28rem 0.5rem;
+  margin: 0 21rem 1rem;
+  font-size: 1.5rem;
 }
 
-.storeDetail__storeType {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: 0 0 0.5rem 27rem;
+.storeDetail__name {
+  padding-top: 5px;
 }
 
-.storeDetail__storeType__title {
-  margin-right: 4rem;
-}
-
-.storeDetail__payment {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: 0 0 0.5rem 27rem;
-}
-
-.storeDetail__payment__title {
-  margin-right: 4rem;
-}
-
+.storeDetail__storeType,
+.storeDetail__payment,
 .storeDetail__category {
   display: flex;
   align-items: center;
   text-align: center;
-  margin: 0 0 0.5rem 27rem;
+  margin: 0 0 1rem 20.5rem;
+  font-size: 1.3rem;
 }
 
+.storeDetail__storeType__title,
+.storeDetail__payment__title,
 .storeDetail__category__title {
-  margin-right: 4rem;
+  margin-right: 5rem;
 }
 
 .storeDetail__photo {
   display: block;
-  margin: 0 0 2rem 26rem;
+  margin-top: 1.5rem;
+  margin-left: 23rem;
   height: 200px;
   width: 350px;
   border: 1px solid var(--color-accent);
@@ -141,7 +134,7 @@ h4 {
 .review__info {
   display: block;
   font-size: 1.5rem;
-  margin: 1rem 0;
+  margin: 3rem 0 1.7rem;
 }
 
 .review__level__photo {
@@ -197,7 +190,8 @@ h4 {
 
 .review__contents__total {
   font-size: 1.3rem;
-  margin: 0 0 0.5rem 16rem;
+  /* margin: 0 0 0.5rem 16rem; */
+  margin: 0 0 0.5rem 10rem;
 }
 
 .review__contents__star {
@@ -208,7 +202,7 @@ h4 {
   display: grid;
   grid-template-columns: 1fr 9fr;
   align-items: center;
-  margin: 0 10rem 0.5rem 10rem;
+  margin: 1rem 10rem 1rem 10rem;
 }
 
 .review__contents__photo {
@@ -230,4 +224,9 @@ h4 {
 
 .review__contents__ownerInfo {
   font-weight: bolder;
+}
+
+.review__contents__value {
+  /* color: var(--color-gray); */
+  color: #7f7f7f;
 }
