--- a/hositamtam/src/main/webapp/css/storeInsertAndUpdate.css
+++ b/hositamtam/src/main/webapp/css/storeInsertAndUpdate.css
@@ -28,10 +28,6 @@ body {
   margin: 0;
 }
 
-h2 {
-  margin: 0;
-}
-
 /* common */
 .max-container {
   max-width: var(--size-max-width);
@@ -41,7 +37,7 @@ h2 {
 /* Store Insert And Update */
 #store__update {
   display: flex;
-  height: 745px;
+  height: 1116px;
   margin: auto;
 }
 
@@ -49,7 +45,7 @@ h2 {
   display: block;
   align-items: center;
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 3rem;
   padding: 40px;
   width: 800px;
   border: 3px solid var(--color-accent);
@@ -99,6 +95,10 @@ h2 {
   margin-bottom: 1rem;
 }
 
+.siau__h2 {
+  margin: 0;
+}
+
 .store__category,
 .store__category2 {
   display: flex;
@@ -138,6 +138,7 @@ h2 {
 .store__photo__label {
   padding-top: 5px;
   border-bottom: 1px solid var(--color-gray);
+  margin-left: 1rem;
 }
 
 .store__update__button {
