--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -17,11 +17,7 @@
     /* Size */
     --size-max-width: 1200px;
   }
-  
-/* @font-face {
-    font-family: "GmarketSans";
-    src: url("./fonts/GmarketSansTTFLight.ttf");
-} */
+
 
 * {
     box-sizing: border-box;
@@ -47,10 +43,23 @@ body {
 
 button {
     display: inline-block;
-   
 }
-a {
+body a {
     text-decoration: none;
+}
+#section1 video {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; */
+  pointer-events: none; /* 비디오 요소가 클릭 이벤트를 가로채지 않도록 설정 */
+  width: 145%;
+            height: auto;
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
 }
 .section {
   width: 100%;
@@ -59,11 +68,12 @@ a {
 }
 #section1{
     margin-top: 3rem;
-    background-image:
+    /* 3rem 나중에 바꾸기 */
+    /* background-image:
       linear-gradient(
         rgba(0, 0, 0, 0.2),
         rgba(0, 0, 0, 0.4)),  
-        url(../images/메인페이지-배경.png);
+        url(../images/메인페이지-배경.png); */
     background-size: 100% 100%;
     width: 100%;
     height: 100%;
@@ -79,7 +89,7 @@ ul {
   }
   
   /* header */
-  .mainHeader {
+  /* .mainHeader {
     position: fixed;
     top: 0;
     width: 100%;
@@ -142,19 +152,14 @@ ul {
   .mainHeader__menu__item.active {
     border: 1px solid var(--color-accent);
     border-radius: 4px;
-  }
+  } */
   /* ---------------------- header */
-#serviceInfo{
-    width: 100%;
-    height: 100vh;
-    background-color: #eeeeee;
-}
 
 
 
 #busanExplain{
     color: white;
-    font-size: 40px;
+    font-size: 50px;
     position: absolute;
     top: 50%;
     left: 10%;
@@ -166,6 +171,10 @@ ul {
   font-size: 2rem;
    /* margin-left: -150px;  */
   /* margin-top: -50px;  */
+}
+#btnGroup a{
+ color: white;
+ text-decoration: none;
 }
 .category{
     margin-top: 10px;
@@ -189,6 +198,7 @@ ul {
 .listCategory{
   display: flex;
   justify-content: flex-end;
+  padding-right: 20px;
         width: 550px; 
         height: 100vh; 
         background: #0E4194; 
@@ -200,8 +210,17 @@ ul {
       /*  애니메이션시작화면 */
         transition : all 0.5s;
         transform: translateX(550px);
-     
-   
+}
+.goCategory{
+  line-height: 80px;
+  border: 1px solid #ffffff;
+  padding: 10px;
+}
+.goCategory:hover{
+  transform: translateX(-50px);
+
+}
+.left:hover{
 }
 
 .show-list{
@@ -210,26 +229,49 @@ ul {
 }
 .listCategoryContent{
   font-size: 2.5rem;
-  float: right;
+  /* float: right; */
 }
 /* Footer */
 #information {
   position: relative;
   text-align: center;
-  background-color: #d9d9d9;
+  /* background-color: #d9d9d9; */
+  /* color: grey; */
   color: white;
+  background-color: #333333;
+  opacity: 0.9;
   padding: 1rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+#information a{
+  color: white;
+}
 .information__title {
+  /* margin-top: 3rem; */
   margin: 0;
   padding: 0.5rem 10rem;
+  
 }
-
+.information__located{
+  width: 1000px;
+}
 .information__contents {
-  display: flex;
-  justify-content: space-between;
+  /* display: flex; */
+  /* justify-content: space-between; */
 }
+.footer__logo_img{
+    width: 200px;
+    padding: 0 1rem;
+}
+.bi-arrow-up-circle-fill {
+  font-size: 3rem;
+}
+/* Footer End========================================*/
+
+
 #submit {
   /* border-radius: 20px; */
   border: 0px;
@@ -272,17 +314,28 @@ ul {
 .hosiInfo{
   width: 80%;
   height: 50vh;
-  border: 4px solid #0E4194;
+  /* border: 4px solid #0E4194; */
   margin: 0 auto;
 }
-.gradeInfo{
-
+.hosiInfo p {
+ font-size: 2rem;
+ text-align: center;
+ color: #0E4194;
+}
+.gradeIcon{
+  display: flex;
+  
+  justify-content: center;
+}
+.gradeImage{
+ width: 250px;
+  text-align: center;
 }
 .gradeLine{
   display: flex;
   justify-content: center;
 }
-.grade1, .grade2, .grade3, .grade4{
+.grade1, .grade2, .grade3, .grade4, .grade5{
  width: 250px;
  height: 50px;
 }
@@ -300,6 +353,10 @@ ul {
   background-color: #0E4194;
   
 }
+.grade5{
+  background-color: gold;
+  
+}
 .gradeNameBox{
   display: flex;
   justify-content: center;
@@ -310,7 +367,37 @@ ul {
  text-align: center;
 }
 
+/*========================= section2===================================== */
+.information__title{
 
+}
+.dropdown{
+  width: 280px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+.btnDrop{
+  border: 1px solid white;
+  padding: 4px;
+  color: white;
+  background-color: #333333;
+  opacity: 0.9;
+}
+.dropDownMenu{
+  text-align: left;
+  font-size: 1.5rem;
+  visibility:  hidden;
+}
+.dropDownMenu a{
+  color: #333333;
+}
+.show-dropDown{
+  visibility:  visible;
+}
+.swiper {
+  width: 100%;
+  height: 600px;
+}
 
 
 
