--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -47,7 +47,8 @@ body {
 
 /* Store Detail */
 #storeDetail {
-  width: 100%;
+  /* width: 100%; */
+  width: 960px;
   text-align: center;
   margin-top: 10rem;
   padding: 2rem;
@@ -58,7 +59,6 @@ body {
   display: block;
   font-size: 2rem;
   color: var(--color-gray);
-
   margin-bottom: 2rem;
 }
 
@@ -90,13 +90,16 @@ body {
 .storeDetail__star__name {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin: 0 21rem 1rem;
+  margin: 0 0 1rem 15rem;
   font-size: 1.5rem;
 }
 
+.storeDetail__star {
+  margin-right: 5rem;
+}
 .storeDetail__name {
   padding-top: 5px;
+  /* padding-right: 14.8rem; */
 }
 
 .storeDetail__storeType,
@@ -105,7 +108,7 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
-  margin: 0 0 1rem 20.5rem;
+  margin: 0 0 1rem 14.5rem;
   font-size: 1.3rem;
 }
 
@@ -118,7 +121,7 @@ body {
 .storeDetail__photo {
   display: block;
   margin-top: 1.5rem;
-  margin-left: 23rem;
+  margin-left: 17rem;
   height: 200px;
   width: 350px;
   border: 1px solid var(--color-accent);
