--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -47,6 +47,11 @@ button {
 body a {
     text-decoration: none;
 }
+.mainHeader__nav a{
+	color: black;
+	text-decoration: none;
+}
+
 #section1 video {
   /* position: absolute;
   top: 0;
@@ -88,74 +93,7 @@ ul {
     padding: 0;
   }
   
-  /* header */
-  /* .mainHeader {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1;
-    background-color: var(--color-background);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  }
-  
-  .mainHeader__logo__img {
-    width: 150px;
-    padding: 0 1rem;
-  }
-  
-  .market__search {
-  }
-  
-  .market__searchInput {
-    width: 40rem;
-    height: 3rem;
-    align-items: center;
-    padding: 0;
-    font-size: 1.5rem;
-    border-radius: 4px;
-  }
-  
-  .market__searchButton {
-    width: 3rem;
-    height: 3rem;
-    padding: 0;
-    border: none;
-    font-size: 1.5rem;
-    background-color: white;
-  }
-  
-  .market__searchButton:hover {
-    color: var(--color-accent);
-  }
-  
-  .mainHeader__menu {
-    display: flex;
-    gap: 4px;
-  }
-  
-  .mainHeader__menu__item {
-    display: block;
-    font-size: 1.5rem;
-    padding: 8px 16px;
-    border-bottom: 1px solid transparent;
-  }
-  
-  .mainHeader__menu__item:hover {
-    border-bottom: 1px solid var(--color-accent);
-  }
-  
-  .mainHeader__menu__item.active {
-    border: 1px solid var(--color-accent);
-    border-radius: 4px;
-  } */
-  /* ---------------------- header */
-
-
+ 
 
 #busanExplain{
     color: white;
@@ -169,8 +107,7 @@ ul {
   top: 30%;
   left: 30%;
   font-size: 2rem;
-   /* margin-left: -150px;  */
-  /* margin-top: -50px;  */
+  
 }
 #btnGroup a{
  color: white;
@@ -186,8 +123,7 @@ ul {
     background-color: #0188CC;
     border: 0px;
     color: white;
-    /* font-size: 2.5em; */
-
+    
 }
 .category:hover{
     
@@ -213,7 +149,7 @@ ul {
 }
 .goCategory{
   line-height: 80px;
-  border: 1px solid #ffffff;
+  
   padding: 10px;
 }
 .goCategory:hover{
@@ -229,8 +165,9 @@ ul {
 }
 .listCategoryContent{
   font-size: 2.5rem;
-  /* float: right; */
+  
 }
+
 /* Footer */
 #information {
   position: relative;
@@ -258,10 +195,7 @@ ul {
 .information__located{
   width: 1000px;
 }
-.information__contents {
-  /* display: flex; */
-  /* justify-content: space-between; */
-}
+
 .footer__logo_img{
     width: 200px;
     padding: 0 1rem;
@@ -368,9 +302,7 @@ ul {
 }
 
 /*========================= section2===================================== */
-.information__title{
 
-}
 .dropdown{
   width: 280px;
   margin: 0 auto;
