--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -72,13 +72,9 @@ body a {
   position: relative;
 }
 #section1{
-    margin-top: 3rem;
+    margin-top: 45px;
     /* 3rem 나중에 바꾸기 */
-    /* background-image:
-      linear-gradient(
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.4)),  
-        url(../images/메인페이지-배경.png); */
+    
     background-size: 100% 100%;
     width: 100%;
     height: 100%;
@@ -151,6 +147,11 @@ ul {
   line-height: 80px;
   
   padding: 10px;
+}
+.goCategory button{
+  border: 0;
+  background-color: transparent;
+  color: white;
 }
 .goCategory:hover{
   transform: translateX(-50px);
