--- a/hositamtam/src/main/webapp/css/postMain.css
+++ b/hositamtam/src/main/webapp/css/postMain.css
@@ -5,16 +5,18 @@
     padding: 0;
     
 }
-html {
-    overflow: hidden;  
-  }
-  html, body {
+
+  /*html, body {
     display: block;
     width: 100%;
     height: 100%;
     margin: 0;
     
-  }
+  }*/
+  /*body {
+  overflow-y: scroll;  세로 스크롤바를 항상 표시 
+  height: 100vh;  뷰포트 높이만큼 높이 설정 
+}*/
 .section {
     width: 100%;
     height: 100%;
@@ -32,7 +34,7 @@ html {
 a{
     text-decoration: none;
 }
-ul.list {
+/*ul.list {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
@@ -44,6 +46,34 @@ ul.list::after {
     content: '';
     display: block;
     clear: both;
+}*/
+.list {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #0188CC;
+}
+.list::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+#pCategory{
+	 display: block;
+    padding: 10px 20px 10px 20px;
+    float: left;
+    margin-right: -1px;
+    margin-bottom: -1px;
+    color: grey;
+    text-decoration: none;
+}
+#pCategory:hover{
+    background-color: #0188CC;
+    border-radius: 10px;
+    color: black;
+    
 }
 .tab-button {
     display: block;
@@ -236,6 +266,9 @@ border-bottom: 1px solid #0188CC;
 #image_container img {
     max-width: 100%; /* 이미지를 컨테이너의 가로 크기에 맞게 조정 */
     max-height: 100%; /* 이미지를 컨테이너의 세로 크기에 맞게 조정 */
+}
+#imgBox img{
+	width: 360px;
 }
 #mkName{
     font-size: 40px;
