--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -53,7 +53,6 @@ body {
 
 /* Store Detail */
 #storeDetail {
-  /* width: 100%; */
   width: 960px;
   text-align: center;
   margin-top: 10rem;
@@ -110,7 +109,6 @@ body {
 
 .storeDetail__name {
   padding-top: 5px;
-  /* padding-right: 14.8rem; */
 }
 
 .storeDetail__storeType,
@@ -166,13 +164,30 @@ body {
 }
 
 .review__star {
+  color: var(--color-starIcon);
+}
+
+.review__star1:hover ~ .review__star2,
+.review__star1:hover ~ .review__star3,
+.review__star1:hover ~ .review__star4,
+.review__star1:hover ~ .review__star5 {
   color: #e0e0e0;
 }
 
-/* .review__star i:hover,
-.review__star i:hover ~ i {
-  color: #e6007e;
-} */
+.review__star2:hover ~ .review__star3,
+.review__star2:hover ~ .review__star4,
+.review__star2:hover ~ .review__star5 {
+  color: #e0e0e0;
+}
+
+.review__star3:hover ~ .review__star4,
+.review__star3:hover ~ .review__star5 {
+  color: #e0e0e0;
+}
+
+.review__star4:hover ~ .review__star5 {
+  color: #e0e0e0;
+}
 
 #review__form {
   margin-bottom: 2rem;
@@ -209,7 +224,6 @@ body {
 
 .review__contents__total {
   font-size: 1.3rem;
-  /* margin: 0 0 0.5rem 16rem; */
   margin: 0 0 0.5rem 10rem;
 }
 
@@ -253,7 +267,6 @@ body {
 }
 
 .review__contents__value {
-  /* color: var(--color-gray); */
   color: #7f7f7f;
 }
 
@@ -275,5 +288,4 @@ body {
 
 .arrow-up__icon {
   padding: 0.7rem;
-  /* padding: 0.4rem; */
 }
